# pdfInsight

./: .gitignore  agent.ipynb  ans.md  ex.txt  profiling_results.prof  pyproject.toml  rag_pipeline.py  requirements.txt
app/: __init__.py  main.py
app/core/: chunking.py  rag_pipeline.py  redis.py
app/core/ingestion/: base.py  sources.py
app/core/logging/: config.json  logger.py  mylogger.py
app/core/parsers/: base.py  parsers.py
app/core/vectorstore/: base.py  stores.py
app/routers/: rag.py
app/settings/: base.py  config.py
