[project]
name = "papermind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioredis>=2.0.1",
    "fastapi[standard]==0.125.0",
    "httpx>=0.28.1",
    "langchain==1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community==0.4.1",
    "langchain-core>=1.2.3",
    "langchain-google-genai>=4.1.2",
    "langchain-text-splitters>=1.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.7",
    "pypdf>=6.4.2",
    "python-multipart>=0.0.21",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "spacy>=3.8.11",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]
